feat: 팀/프로젝트/이슈 CRUD 및 마이페이지용 유저 API 구현
- 팀: 전체 조회, 단일 조회, 수정, 삭제 API 추가
- 프로젝트: 상태 코드 포함 생성 및 조회 기능 정비
- 이슈: 담당자 nullable 처리, 등록/수정/삭제 API 구현
- User: 마이페이지용 UserResponseDto 도입 및 fromEntity 패턴 적용
- 서비스 계층 전반에 실용적인 주석 추가 및 리팩토링 정리